--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "ci": "yarn run lint && yarn run test:unit"
   },
   "dependencies": {
-    "@aws-sdk/client-athena": "^3.46.0",
+    "@aws-sdk/client-athena": "^3.47.1",
+    "@aws-sdk/client-timestream-query": "^3.47.1",
     "@fortawesome/fontawesome-free": "5.12.0",
     "@google-cloud/bigquery": "5.6.0",
     "classnames": "2.2.5",
