--- a/package.json
+++ b/package.json
@@ -71,8 +71,8 @@
     "@types/react-select": "~3.0.13",
     "@types/react-splitter-layout": "3.0.0",
     "@types/sqlite3": "3.1.6",
-    "@typescript-eslint/eslint-plugin": "3.4.0",
-    "@typescript-eslint/parser": "3.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
     "copy-webpack-plugin": "^8.1.1",
     "css-loader": "^5.2.1",
     "electron": "^12.2.3",
@@ -80,17 +80,17 @@
     "electron-mocha": "~11.0.2",
     "electron-notarize": "1.1.1",
     "electron-publisher-s3": "20.17.2",
-    "eslint": "~7.3.1",
-    "eslint-config-prettier": "~6.11.0",
-    "eslint-plugin-prettier": "3.1.4",
+    "eslint": "^8.7.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "~7.20.0",
     "execa": "0.9.0",
     "mini-css-extract-plugin": "~1.4.1",
-    "prettier": "~1.19.1",
+    "prettier": "^2.5.1",
     "spectron": "^14.0.0",
     "ts-loader": "~8.1.0",
     "ts-node": "5.0.1",
-    "typescript": "^3.9.5",
+    "typescript": "^4.5.5",
     "webpack": "^5.31.2",
     "webpack-cli": "^4.6.0",
     "webpack-node-externals": "^2.5.2"
