--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "alwaysStrict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
+    "noImplicitOverride": true,
     "strictNullChecks": true,
     "skipLibCheck": true,
     "baseUrl": "./",
