--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-modal": "3.1.10",
     "react-select": "~3.0.8",
     "react-splitter-layout": "4.0.0",
+    "sql-formatter": "^4.0.2",
     "sqlite3": "^5.0.2",
     "td": "0.3.0"
   },
