--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@types/lodash": "4.14.157",
     "@types/mocha": "2.2.46",
     "@types/node": "12.12.12",
+    "@types/pg": "^8.6.4",
     "@types/plotly.js": "1.44.21",
     "@types/react": "~16.8.25",
     "@types/react-dom": "~16.8.5",
