--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@aws-sdk/client-timestream-query": "^3.47.1",
     "@fortawesome/fontawesome-free": "5.12.0",
     "@google-cloud/bigquery": "5.6.0",
+    "@hokaccha/sql-formatter": "^1.0.0",
     "classnames": "2.2.5",
     "codemirror": "~5.58.2",
     "compare-versions": "^4.1.3",
@@ -54,7 +55,6 @@
     "react-modal": "3.1.10",
     "react-select": "~3.0.8",
     "react-splitter-layout": "4.0.0",
-    "sql-formatter": "hokaccha/sql-formatter#hokaccha-fork-v5.0.0",
     "sqlite3": "^5.0.2",
     "td": "0.3.0"
   },
