Disable react/prop-types for functional components

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -28,6 +28,7 @@ rules:
   '@typescript-eslint/no-explicit-any': off
   '@typescript-eslint/no-non-null-assertion': off
   '@typescript-eslint/explicit-module-boundary-types': off
+  'react/prop-types': off
 
 plugins:
   - react
