--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "~7.20.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
     "execa": "0.9.0",
     "mini-css-extract-plugin": "~1.4.1",
     "prettier": "^2.5.1",
