--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "pg": "8.7.1",
     "plotly.js-basic-dist-min": "1.57.1",
     "react": "16.8.6",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "16.8.6",
     "react-linkify": "^1.0.0-alpha",
     "react-micro-flyout": "1.0.1",
@@ -56,6 +57,7 @@
     "react-select": "~3.0.8",
     "react-splitter-layout": "4.0.0",
     "sqlite3": "^5.0.2",
+    "styled-components": "^5.3.6",
     "td": "0.4.0"
   },
   "devDependencies": {
