Use universal binary for macOS

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -33,8 +33,10 @@ win:
 
 mac:
   target:
-    - zip
-    - dmg
+    - target: dmg
+      arch: universal
+    - target: zip
+      arch: universal
   category: public.app-category.developer-tools
   hardenedRuntime: true
   entitlements: ./build/entitlement.plist
