--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "test": "yarn run test:unit && yarn run test:integration",
     "test:unit": "electron-mocha --renderer --require ts-node/register --ui tdd --color --grep @remote --invert \"./test/unit/**/*.test.{ts,tsx}\"",
     "test:unit:remote": "electron-mocha --renderer --require ts-node/register --ui tdd --color --grep @remote \"./test/unit/**/*.test.{ts,tsx}\"",
-    "test:build": "webpack --env BUILD_ENV=test --mode=development && electron-builder build --x64 --config electron-builder.test.yml --publish never --dir",
+    "test:build": "webpack --env BUILD_ENV=test --mode=development && electron-builder build --config electron-builder.test.yml --publish never --dir",
     "test:integration": "yarn run test:build && mocha --exit --require ts-node/register --ui tdd test/integration/test.ts",
     "lint": "yarn run lint:eslint && yarn run lint:tsc && yarn run lint:prettier",
     "lint:eslint": "eslint --ext \".js,.jsx,.ts,.tsx\" --max-warnings 0 .",
     "lint:tsc": "tsc --noEmit",
     "lint:prettier": "prettier --list-different \"./**/*.{js,jsx,ts,tsx,css,json}\"",
     "format": "prettier --write \"./**/*.{js,jsx,ts,tsx,css,json}\"",
-    "release:prepare": "webpack --env BUILD_ENV=production --mode=production && electron-builder build --x64 --publish always",
+    "release:prepare": "webpack --env BUILD_ENV=production --mode=production && electron-builder build --publish always",
     "ci": "yarn run lint && yarn run test:unit"
   },
   "dependencies": {
