Add MCP server for AI coding tool integration

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -26,6 +26,16 @@ publish:
 
 extraResources:
   - build/icon.png
+  - from: src/mcp/dist
+    to: mcp
+    filter:
+      - "**/*"
+  - from: src/mcp/node_modules
+    to: mcp/node_modules
+    filter:
+      - "**/*"
+  - from: src/mcp/package.json
+    to: mcp/package.json
 
 win:
   target:
