--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "start": "electron app/development",
     "build": "webpack --mode=development",
     "watch": "webpack --mode=development --watch",
+    "mcp:install": "cd src/mcp && npm install",
+    "mcp:build": "cd src/mcp && npm run build",
+    "mcp:watch": "cd src/mcp && npm run watch",
+    "mcp:test": "cd src/mcp && TS_NODE_PROJECT=tsconfig.test.json npm test",
     "test": "yarn run test:unit && yarn run test:integration",
     "test:unit": "electron-mocha --renderer --require ts-node/register --ui tdd --color --grep @remote --invert \"./test/unit/**/*.test.{ts,tsx}\"",
     "test:unit:remote": "electron-mocha --renderer --require ts-node/register --ui tdd --color --grep @remote \"./test/unit/**/*.test.{ts,tsx}\"",
