--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,6 @@
     "baseUrl": "./",
     "paths": { "plotly.js-basic-dist-min": ["node_modules/@types/plotly.js"] }
   },
-  "include": ["src/**/*", "test/**/*"]
+  "include": ["src/**/*", "test/**/*"],
+  "exclude": ["src/mcp"]
 }
