Fix universal build error by setting x64ArchFiles for sqlite3 native bindings

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -42,7 +42,7 @@ win:
     - nsis
 
 mac:
-  singleArchFiles: "*"
+  x64ArchFiles: "**/node_sqlite3.node"
   target:
     - target: dmg
       arch: universal
